Changes to allow item share